2011-02-09  Nebojsa Ciric  <cira@chromium.org>

        Reviewed by Darin Fisher.

        Implements Locale object of JavaScript internationalization API proposal, as an
        v8 extension. Extension code is hosted in v8 project (src/extensions/experimental/i18n-extension.{cc,h})
        and in this patch we just provide flags, tests and build rules for chromium port.
        https://bugs.webkit.org/show_bug.cgi?id=49414

        * DumpRenderTree/chromium/TestShell.cpp:
        (TestShell::TestShell):

2011-02-09  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Remove UiTools dependency from MiniBrowser
        https://bugs.webkit.org/show_bug.cgi?id=54096

        * MiniBrowser/qt/MiniBrowser.pro:

2011-02-08  Hayato Ito  <hayato@chromium.org>

        Reviewed by Tony Chang.

        [NRWT] Pull up rebaseline code from compare_output() function defined
        in text_diff.py and image_diff.py into a SingleTestRunner.

        This patch is a first step for eliminating test_type/* classes.

        https://bugs.webkit.org/show_bug.cgi?id=53071

        * Scripts/webkitpy/layout_tests/layout_package/single_test_runner.py:
        * Scripts/webkitpy/layout_tests/test_types/image_diff.py:
        * Scripts/webkitpy/layout_tests/test_types/test_type_base.py:
        * Scripts/webkitpy/layout_tests/test_types/text_diff.py:

2011-02-07  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Mihai Parparita.

        stop generating results.json files
        https://bugs.webkit.org/show_bug.cgi?id=53977

        We've only used incremental_results.json for a while now
        and there are plans to start generating a results.json file that matches
        the format of unexpected_results.json.

        * Scripts/webkitpy/layout_tests/layout_package/json_layout_results_generator.py:
        * Scripts/webkitpy/layout_tests/layout_package/json_results_generator.py: